2000-10-20  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-cvs.el (mhc-cvs/modify): Exec CVS use relative path.

2000-10-20  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* emacs/mhc-cvs.el (mhc-cvs-rsh): New variable.
	(mhc-cvs/backend): Refer `mhc-cvs-rsh' to set a process
	environment variable, `CVS_RSH'.
	(mhc-cvs/shrink-file-name): Use `file-relative-name'.

2000-10-19  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-cvs.el (mhc-cvs-repository-path, mhc-cvs-module-name):
	New variables. Means CVSROOT and module name.
	(mhc-cvs/shrink-file-name): New function. Convert absolute path to
	relative path from '~/Mail/schedule'.
	(mhc-cvs/add, mhc-cvs/remove): Exec CVS use relative path.
	TNX, Mr. Hajime BABA <baba@kusastro.kyoto-u.ac.jp>.
	(mhc-cvs/sync): Exec rescan if mhc-mode buffer.

2000-10-16  Yoshinari Nomura  <nom@quickhack.net>

	* emacs/mhc-db.el (mhc-db-add-exception-rule):
	call mhc-draft-reedit-buffer before
        modifying a buffer. 
	Tnx, Mr.Takaaki MORIYAMA <taka@airlab.cs.ritsumei.ac.jp>
	
2000-10-10  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc.el (mhc-mode): Modify doc-string.
	Tnx, Mr. Yoichi NAKAYAMA <yoichi@eken.phys.nagoya-u.ac.jp>.

2000-10-06  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc.el (mhc-mode-menu-spec): Change enable method of [mhc-file-sync].

2000-10-04  Yoshinari Nomura  <nom@quickhack.net>

	* emacs/mhc-summary.el (mhc-summary-make-contents):
	add treats in case category-predicate nil.

2000-10-04  Toshihiko SHIMOKAWA  <toshi@tea.forus.or.jp>

	* emacs/00usage.jis: Untabified. Move some descriptions to
	../00usage.jis.  Delete some obsolete descrptions.
	
	* 00usage.jis: Merge descrption from emacs/00usage.jis. Change an
	order of descrption.

2000-10-04  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/00usage.jis: Change key bind in mhc-mode. Account for
	mhc-prefix-key.

	* emacs/mhc.el (mhc-prefix-key, mhc-prefix-map): New variable for
	'Emacs Minor Mode Conventions'.